# perl-config-setting

./: Build.PL  Changes  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  README
lib/Config/: Setting.pm
src/mod_sed/: Changes  LICENSE  MANIFEST  Makefile  Makefile.tmpl  README  TODO  compile.c  defs.h  extern.h  fgetln.c  main.c  misc.c  mod_sed.c  process.c
src/pgen/: LICENSE  MANIFEST  Makefile.in  README  configure  configure.in  mkinstalldirs  pgen  pgen.1  pgen.in  procmail-defn.m4  procmail.m4
src/spider/: Makefile.in  README  TODO  acconfig.h  config.h.in  configure.in  mkinstalldirs
src/spider/doc/: Makefile.in  debug_client.1  debug_client.man  extend.me  fir.me  fir.ps  ipr-spider-seq.fig  ipr-spider-seq.pic  ipr-spider.fig  ipr-spider.pic  ipr.me  kill_spider.8  kill_spider.man  libnev.man  protocol.me  report.me  spider.8  spider.man  spider.txt
src/spider/doc/REFERENCE/: reply-codes.txt
src/spider/etc/: Makefile.in  spider.conf.in  users
src/spider/include/: codes.h  ds.h  mod.h  nev.h  spider.h
src/spider/lib/: ChangeLog  Makefile.in  ds.c  io.c  mod.c  mod.h  mod_ds.c  mod_io.c  mod_utils.c  utils.c
src/spider/lib/ds/: Makefile.in  ds.c  ds.h
src/spider/lib/mod/: Makefile.in  mod.c  mod.h  mod_ds.c  mod_io.c  mod_utils.c
src/spider/lib/nev/: Makefile.in  nev.c
src/spider/modules/: ChangeLog  Makefile.in
src/spider/modules/message/: Makefile.in  command.c  config.h  main.c  parse.c  posts.c  posts.h  replies.h  util.c
src/spider/modules/motd/: Makefile.in  motd-sample.txt  motd.c
src/spider/modules/page/: Makefile.in  page.c
src/spider/modules/talker/: Makefile.in  command.c  command.h  config.h  error.c  main.c  main.h  protos.h  replies.h  talker.c  talker.h  util.c
src/spider/modules/test/: Makefile.in  test.c
src/spider/src/: .gdbinit  Makefile.in  NOTES  cmds.c  codes.h  config.c  conn.c  debug_client.sh  ds.c  init.c  io.c  kill_spider.sh  net.c  spider.c  spider.h  term.c  trace_spider.sh  utils.c
src/tkclient/: Makefile  TODO  cmds.tcl  init.tcl  messages.tcl  talker.tcl  tkclient.in  ui.tcl  utils.tcl
t/: 01basic.t  02simple.t  03xml.t  Chunk.t  test.ini  test.xml
(+18 files in other folders)
