dnl @(#) $Id: configure.in,v 1.1 2001/06/16 21:59:34 dom Exp $
dnl Process this file with autoconf to produce a configure script.

AC_INIT(procmail-defn.m4)
AC_REVISION($Revision: 1.1 $)

AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PATH_PROG(PROCMAIL, procmail)
AC_PATH_PROG(FORMAIL, formail)
AC_PATH_PROG(EMFOUR, m4)

if test -z "$PROCMAIL" ; then
	echo "Warning!  procmail not found.  This program won't be much"
	echo "use without it..."
fi

if test -z "$FORMAIL" ; then
	echo "Warning!  formail not found.  Some features may not be"
	echo "available."
fi

if test -z "EMFOUR" ; then
	echo "Error!  No m4 program was found.  This program will not be"
	echo "functional without it."
	exit 1
fi

AC_OUTPUT(Makefile pgen)
