dnl @(#) $Id: configure.in,v 1.5 2000/01/15 11:05:24 dom Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/cmds.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(nsl, gethostbyname, LIBS="${LIBS} -lnsl")
AC_CHECK_LIB(socket, socket, LIBS="${LIBS} -lsocket")

dnl Checks for header files.
dnl This one's only needed by Alex
dnl AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(limits.h sys/time.h syslog.h unistd.h)
dnl syslog.h & unistd.h *are* required!

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
dnl Alex only:
dnl AC_FUNC_VPRINTF
dnl memcpy & strchr needed to check for ANSIness - autoconf manual
AC_CHECK_FUNCS(memcpy mkdir select socket strchr strdup)

AC_OUTPUT(Makefile
	  src/Makefile
	  lib/Makefile
	  lib/ds/Makefile
	  lib/mod/Makefile
	  lib/nev/Makefile
	  modules/Makefile
	  modules/motd/Makefile
	  modules/page/Makefile
	  modules/test/Makefile
	  modules/talker/Makefile
	  modules/message/Makefile
	  etc/Makefile
	  doc/Makefile)
dnl AC_OUTPUT(DOC/Makefile modules/alex/Makefile)
